# spec_diag

./: .gitignore  README.md  pyproject.toml
.claude/skills/hpc3/: SKILL.md
data/: cruxeval.jsonl  math_seeds.jsonl
docs/: framework.md  hpc3_usage.md
scripts/: acd_u_paths.sh  hpc_slurm_helper.py  job_proj1_1vllm_3grpo.sbatch  job_spec_diag_acd_u.sbatch  job_spec_diag_proj.sbatch  job_vllm_generator_acd_u.sbatch  launch_vllm_gen_1xa800.sh  launch_vllm_gen_2xa800.sh  launch_vllm_gen_2xh100.sh  launch_vllm_gen_4xh100.sh  run_grpo_2gpu_h100.sh  run_spec_diag_3xa800.sh  run_verl_grpo_2gpu_sanity.sh  run_verl_sanity.sh  run_vllm_1gpu_h100.sh  setup_env.sh  step2_grpo.sh  step2_grpo_3gpu.sh  step2_grpo_4gpu.sh  step2_grpo_5gpu.sh  step_1_vllm.sh  submit_acd_u.sh  submit_proj.sh  submit_proj1.sh
spec_diag/: __init__.py  main.py  train.py
spec_diag/configs/: generator.yaml  math_generator.yaml  spec_diag_grpo.yaml
spec_diag/dataset/: __init__.py  dynamic_dataset.py
spec_diag/eval/: __init__.py  cruxeval_dataset.py  humaneval_dataset.py  math500_dataset.py
spec_diag/executors/: __init__.py  auto_tagger.py  base.py  code_executor.py  math_executor.py  python_executor.py
spec_diag/generator/: __init__.py  math_generator.py  memory.py  react_generator.py  student_profiler.py
spec_diag/generator/prompts/: __init__.py
spec_diag/rewards/: __init__.py  executor_reward.py  math_grading.py  reward_tracker.py  spec_diag_score.py
spec_diag/trainer/: __init__.py  dynamic_grpo_trainer.py
tests/: test_dynamic_dataset.py  test_dynamic_grpo_trainer.py  test_python_executor.py
verl/verl/trainer/ppo/: core_algos.py
